--- a/sources/style.css
+++ b/sources/style.css
@@ -115,4 +115,6 @@
                 padding: 20px 0;
             }
         }
-   
+      #botengine-chat {
+            width: 100% !important;
+        }
